; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_index.c_test_diff_index__reports_conflicts.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_index.c_test_diff_index__reports_conflicts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32*, i32 }

@GIT_DELTA_ADDED = common dso_local global i64 0, align 8
@GIT_DELTA_DELETED = common dso_local global i64 0, align 8
@GIT_DELTA_MODIFIED = common dso_local global i64 0, align 8
@GIT_DELTA_CONFLICTED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_diff_index__reports_conflicts() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = call i32 @do_conflicted_diff(%struct.TYPE_3__* %1, i32 0)
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 6
  %4 = load i32, i32* %3, align 8
  %5 = call i32 @cl_assert_equal_i(i32 8, i32 %4)
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 5
  %7 = load i32*, i32** %6, align 8
  %8 = load i64, i64* @GIT_DELTA_ADDED, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @cl_assert_equal_i(i32 3, i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 5
  %13 = load i32*, i32** %12, align 8
  %14 = load i64, i64* @GIT_DELTA_DELETED, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @cl_assert_equal_i(i32 2, i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 5
  %19 = load i32*, i32** %18, align 8
  %20 = load i64, i64* @GIT_DELTA_MODIFIED, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @cl_assert_equal_i(i32 2, i32 %22)
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 5
  %25 = load i32*, i32** %24, align 8
  %26 = load i64, i64* @GIT_DELTA_CONFLICTED, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @cl_assert_equal_i(i32 1, i32 %28)
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 4
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @cl_assert_equal_i(i32 7, i32 %31)
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @cl_assert_equal_i(i32 9, i32 %34)
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @cl_assert_equal_i(i32 2, i32 %37)
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @cl_assert_equal_i(i32 5, i32 %40)
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @cl_assert_equal_i(i32 2, i32 %43)
  ret void
}

declare dso_local i32 @do_conflicted_diff(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
